[package]
name = "chip8"
version = "0.1.0"
authors = ["Andrew Blakey <ablakey@locusrobotics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty-hex = "0.1.1"

[dependencies.sdl2]
version = "0.33.0"
features = ["gfx"]
